--- a/Bowel Tracker/Base.lproj/Main.storyboard
+++ b/Bowel Tracker/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1112" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H1p-Uh-vWS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--Master-->
@@ -132,7 +132,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDq-VH-Dc4">
-                                <rect key="frame" x="230" y="225" width="140" height="30"/>
+                                <rect key="frame" x="230" y="225" width="140" height="0.0"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="RhP-Ph-gFf"/>
                                     <constraint firstAttribute="width" constant="140" id="d95-3j-zX3"/>
@@ -147,9 +147,6 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wMJ-FW-cMd">
                                 <rect key="frame" x="150" y="311" width="300" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="uWo-fS-8QY"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Log Bowel Movement">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -161,11 +158,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="QlA-cy-7mo" firstAttribute="top" secondItem="wMJ-FW-cMd" secondAttribute="bottom" constant="259" id="LgT-Tg-74s"/>
-                            <constraint firstItem="wMJ-FW-cMd" firstAttribute="centerX" secondItem="UQI-SX-ChP" secondAttribute="centerX" id="R80-eb-D6C"/>
-                            <constraint firstItem="wMJ-FW-cMd" firstAttribute="centerX" secondItem="bDq-VH-Dc4" secondAttribute="centerX" id="iqO-36-aTS"/>
-                            <constraint firstItem="wMJ-FW-cMd" firstAttribute="top" secondItem="bDq-VH-Dc4" secondAttribute="bottom" constant="56" id="wd1-0C-Zzt"/>
-                            <constraint firstItem="bDq-VH-Dc4" firstAttribute="top" secondItem="iEt-h1-HeS" secondAttribute="bottom" constant="191" id="xeP-vK-Tga"/>
+                            <constraint firstItem="QlA-cy-7mo" firstAttribute="top" secondItem="wMJ-FW-cMd" secondAttribute="bottom" priority="800" constant="259" id="2KV-0T-Vb5"/>
+                            <constraint firstItem="bDq-VH-Dc4" firstAttribute="top" secondItem="iEt-h1-HeS" secondAttribute="bottom" priority="800" constant="161" id="7FS-GR-0WG"/>
+                            <constraint firstItem="wMJ-FW-cMd" firstAttribute="top" secondItem="bDq-VH-Dc4" secondAttribute="bottom" priority="900" constant="60" id="a56-It-m8a"/>
+                            <constraint firstItem="bDq-VH-Dc4" firstAttribute="top" secondItem="iEt-h1-HeS" secondAttribute="bottom" constant="161" id="dXb-O0-WhN"/>
+                            <constraint firstAttribute="centerX" secondItem="bDq-VH-Dc4" secondAttribute="centerX" id="g43-Js-fdi"/>
+                            <constraint firstAttribute="centerX" secondItem="wMJ-FW-cMd" secondAttribute="centerX" id="knV-aX-3da"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="R7B-Mc-XGH">
