added crude meal picker

--- a/Bowel Tracker/Base.lproj/Main.storyboard
+++ b/Bowel Tracker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H1p-Uh-vWS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -189,41 +189,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ta8-SH-oQE">
-                                <rect key="frame" x="284" y="149" width="33" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zn6-jZ-GHl">
-                                <rect key="frame" x="16" y="178" width="568" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zn6-jZ-GHl">
+                                <rect key="frame" x="16" y="326" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFt-3Q-z5a">
-                                <rect key="frame" x="16" y="269" width="568" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GAk-GC-Kfb">
+                                <rect key="frame" x="0.0" y="64" width="600" height="162"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="xac-hZ-ZZU" id="1v9-5N-DzJ"/>
+                                    <outlet property="delegate" destination="xac-hZ-ZZU" id="MBg-d4-K8x"/>
+                                </connections>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="zn6-jZ-GHl" firstAttribute="top" secondItem="iJN-Wj-I51" secondAttribute="top" constant="178" id="1Lh-OE-IXG"/>
-                            <constraint firstItem="zn6-jZ-GHl" firstAttribute="top" secondItem="ta8-SH-oQE" secondAttribute="bottom" constant="8" symbolic="YES" id="8qt-qv-Gye"/>
-                            <constraint firstAttribute="centerX" secondItem="qFt-3Q-z5a" secondAttribute="centerX" id="IzH-8W-69O"/>
-                            <constraint firstItem="qFt-3Q-z5a" firstAttribute="top" secondItem="zn6-jZ-GHl" secondAttribute="bottom" constant="61" id="Llf-Vt-2A3"/>
-                            <constraint firstItem="zn6-jZ-GHl" firstAttribute="trailing" secondItem="qFt-3Q-z5a" secondAttribute="trailing" id="e3C-7A-7CT"/>
+                            <constraint firstItem="GAk-GC-Kfb" firstAttribute="top" secondItem="eSp-Vx-khy" secondAttribute="bottom" id="AWU-rh-EjP"/>
+                            <constraint firstAttribute="centerX" secondItem="GAk-GC-Kfb" secondAttribute="centerX" id="cQS-8a-YDf"/>
                             <constraint firstItem="zn6-jZ-GHl" firstAttribute="leading" secondItem="iJN-Wj-I51" secondAttribute="leadingMargin" id="egW-CZ-6Ve"/>
-                            <constraint firstAttribute="centerX" secondItem="ta8-SH-oQE" secondAttribute="centerX" constant="-0.5" id="s9M-i3-HGD"/>
-                            <constraint firstItem="zn6-jZ-GHl" firstAttribute="leading" secondItem="qFt-3Q-z5a" secondAttribute="leading" id="zdJ-Yw-CZj"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="dateLabel" destination="qFt-3Q-z5a" id="oMN-nu-tvV"/>
+                        <outlet property="mealPicker" destination="GAk-GC-Kfb" id="Zli-GS-w1S"/>
                         <outlet property="mealTextField" destination="zn6-jZ-GHl" id="dzo-lK-Wxn"/>
-                        <outlet property="mealTitle" destination="ta8-SH-oQE" id="GVg-fH-DYY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fAA-hc-YHJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
